--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # Built application files
 *.apk
-*.ap_
-
-
 # Files for the Dalvik VM
 *.dex
 
@@ -19,8 +16,6 @@ gen/
 # Gradle files
 .gradle/
 build/
-/*/build/
-
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -32,3 +27,9 @@ proguard/
 
 # Log Files
 *.log
+
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/captures
+
