--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ android {
 
 repositories {
     maven { url 'http://raw.github.com/wada811/Android-Material-Design-Colors/master/repository/' }
+    maven {
+        url "http://JRAF.org/static/maven/2"
+    }
 }
 
 dependencies {
@@ -44,6 +47,12 @@ dependencies {
     compile 'com.facebook.stetho:stetho-okhttp:1.1.1'
     compile 'com.orhanobut:logger:1.8'
     compile 'net.danlew:android.joda:2.7.2'
+    compile 'com.android.support:recyclerview-v7:22.1.1'
+    compile 'com.hannesdorfmann.parcelableplease:annotation:1.0.1'
+    apt 'com.hannesdorfmann.parcelableplease:processor:1.0.1'
+    compile 'com.marshalchen.ultimaterecyclerview:library:0.3.0'
+    compile 'com.squareup:android-times-square:1.5.0@aar'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
 }
 
 apt {
