--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     compile 'com.marshalchen.ultimaterecyclerview:library:0.3.0'
     compile 'com.squareup:android-times-square:1.5.0@aar'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.roomorama:caldroid:2.0.0'
 }
 
 apt {
