--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,10 +55,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.1.1'
     compile 'com.hannesdorfmann.parcelableplease:annotation:1.0.1'
     apt 'com.hannesdorfmann.parcelableplease:processor:1.0.1'
-    compile 'com.marshalchen.ultimaterecyclerview:library:0.3.0'
-    compile 'com.squareup:android-times-square:1.5.0@aar'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
-    compile 'com.roomorama:caldroid:2.0.0'
+    compile 'net.sourceforge.streamsupport:streamsupport:1.2.1'
 }
 
 apt {
