--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     apt 'com.hannesdorfmann.parcelableplease:processor:1.0.1'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'net.sourceforge.streamsupport:streamsupport:1.2.1'
+    compile 'com.google.guava:guava:18.0'
 }
 
 apt {
